apply plugin: 'com.android.application'
apply plugin: 'me.tatarka.retrolambda'
apply plugin: 'com.cookpad.android.licensetools'

android {
    compileSdkVersion 25
    buildToolsVersion "24.0.2"

    defaultConfig {
        applicationId "me.rei_m.hyakuninisshu"
        minSdkVersion 18
        targetSdkVersion 25
        versionCode 1
        versionName "1.0.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        debug {
            debuggable true
            applicationIdSuffix ".debug"
            versionNameSuffix "d"
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    packagingOptions {
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/NOTICE'
    }
    dataBinding {
        enabled = true
    }
}

dependencies {
    ext.android_support_lib_version = '25.0.1'
    ext.okhttp_version = '3.4.1'
    ext.retrofit_version = '2.1.0'
    ext.streamsupport_version = '1.5.2'

    compile fileTree(dir: 'libs', include: ['*.jar'])

    compile "com.android.support:support-annotations:$android_support_lib_version"
    compile "com.android.support:appcompat-v7:$android_support_lib_version"
    compile "com.android.support:support-v4:$android_support_lib_version"
    compile "com.android.support:percent:$android_support_lib_version"
    compile "com.android.support:design:$android_support_lib_version"
    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta2'

    compile "net.sourceforge.streamsupport:streamsupport:$streamsupport_version"
    compile "net.sourceforge.streamsupport:streamsupport-cfuture:$streamsupport_version"
    compile "net.sourceforge.streamsupport:streamsupport-atomic:$streamsupport_version"
    compile "net.sourceforge.streamsupport:streamsupport-flow:$streamsupport_version"
    compile "net.sourceforge.streamsupport:streamsupport-literal:$streamsupport_version"

    testCompile('com.android.support.test:runner:0.5') {
        exclude module: 'support-annotations'
    }
    testCompile('com.android.support.test:rules:0.5') {
        exclude module: 'support-annotations'
    }

    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
        exclude module: 'support-annotations'
    }
    androidTestCompile('com.android.support.test.espresso:espresso-intents:2.2.2') {
        exclude module: 'support-annotations'
    }
    androidTestCompile('com.android.support.test:runner:0.5') {
        exclude module: 'support-annotations'
    }
    androidTestCompile('com.android.support.test:rules:0.5') {
        exclude module: 'support-annotations'
    }

    provided 'javax.annotation:jsr250-api:1.0'

    compile 'com.google.dagger:dagger:2.7'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.7'

    compile 'io.reactivex.rxjava2:rxjava:2.0.0'
    compile 'io.reactivex.rxjava2:rxandroid:2.0.0'
    compile 'com.squareup.moshi:moshi:1.2.0'
    compile 'com.squareup.picasso:picasso:2.5.2'
    compile 'com.jakewharton:butterknife:8.4.0'

    annotationProcessor 'com.github.gfx.android.orma:orma-processor:4.0.0-rc1'
    compile 'com.github.gfx.android.orma:orma:4.0.0-rc1'

    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
    testCompile 'junit:junit:4.12'
    testCompile 'org.robolectric:robolectric:3.1.2'
    testCompile 'org.robolectric:shadows-support-v4:3.1.2'
    testCompile 'org.mockito:mockito-core:1.10.19'
    androidTestCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
    androidTestCompile 'org.mockito:mockito-core:1.10.19'
    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'

    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
}
